<resources>
    <string name="app_name">News App</string>
    <string name="news_title">News Title</string>
    <string name="news_section">Section </string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_news">No news found.</string>
    <string name="authorLabel">Author: </string>
</resources>